force-app/main/default/objects/Lead/fields/AdWords_Action__c.field-meta.xml
<CustomField>
    <fullName>AdWords_Action__c</fullName>
    <formula>&#39;add&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ação do Google AdWords</label>
    <type>Text</type>
</CustomField>