force-app/main/default/objects/Lead/fields/agregado__c.field-meta.xml
<CustomField>
    <fullName>agregado__c</fullName>
    <label>É agregado ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Sim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>