force-app/main/default/objects/Lead/fields/Ano_vencimento_del__c.field-meta.xml
<CustomField>
    <fullName>Ano_vencimento_del__c</fullName>
    <inlineHelpText>Dois últimos dígitos do ano.
Ex.:  Vencimento do cartão 12/22   Mês 12 e Ano 22</inlineHelpText>
    <label>Ano vencimento</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>