force-app/main/default/objects/Lead/fields/Atualizacao_manual_de_motivo__c.field-meta.xml
<CustomField>
    <fullName>Atualizacao_manual_de_motivo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permite que o registro com status marcado como &quot;Desqualificado&quot; seja salvo sem um motivo de desqualificação. (Criado para execução automática da padronização dos membros de campanha).</description>
    <label>Atualização manual de motivo</label>
    <type>Checkbox</type>
</CustomField>