force-app/main/default/objects/Lead/fields/Auto_Utiliza_o__c.field-meta.xml
<CustomField>
    <fullName>Auto_Utiliza_o__c</fullName>
    <defaultValue>&quot;1-Particular&quot;</defaultValue>
    <description>Campo para integração do Portal de Parceiros Siggo - Para preenhimento do objeto veículo na Oportunidade</description>
    <label>Auto-Utilização Lead</label>
    <length>50</length>
    <type>Text</type>
</CustomField>