force-app/main/default/objects/Lead/fields/Bairro_endereco__c.field-meta.xml
<CustomField>
    <fullName>Bairro_endereco__c</fullName>
    <label>Bairro endereço</label>
    <length>150</length>
    <type>Text</type>
</CustomField>