force-app/main/default/objects/Lead/fields/Bairro_sg__c.field-meta.xml
<CustomField>
    <fullName>Bairro_sg__c</fullName>
    <description>Bairro Para integração portal Siggo</description>
    <label>Bairro</label>
    <length>50</length>
    <type>Text</type>
</CustomField>