force-app/main/default/objects/Lead/fields/C_digo_Tabela_Fipe__c.field-meta.xml
<CustomField>
    <fullName>C_digo_Tabela_Fipe__c</fullName>
    <label>Código Tabela Fipe</label>
    <length>20</length>
    <type>Text</type>
</CustomField>