force-app/main/default/objects/Lead/fields/Campanha__c.field-meta.xml
<CustomField>
    <fullName>Campanha__c</fullName>
    <label>Campanha Atual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>