force-app/main/default/objects/Lead/fields/Campanha_CampaignName__c.field-meta.xml
<CustomField>
    <fullName>Campanha_CampaignName__c</fullName>
    <label>Campanha_CampaignName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>