force-app/main/default/objects/Lead/fields/Campanha_medium__c.field-meta.xml
<CustomField>
    <fullName>Campanha_medium__c</fullName>
    <description>Define o meio de como o visitante submeteu o formulário no site</description>
    <inlineHelpText>Define o meio de como o visitante submeteu o formulário no site</inlineHelpText>
    <label>Campanha_medium</label>
    <length>100</length>
    <type>Text</type>
</CustomField>