force-app/main/default/objects/Lead/fields/Campanha_source__c.field-meta.xml
<CustomField>
    <fullName>Campanha_source__c</fullName>
    <label>Campanha_source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>