force-app/main/default/objects/Lead/fields/Canal_de_entrada__c.field-meta.xml
<CustomField>
    <fullName>Canal_de_entrada__c</fullName>
    <label>Canal de entrada</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Receptivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>