force-app/main/default/objects/Lead/fields/Cep_preenchido__c.field-meta.xml
<CustomField>
    <fullName>Cep_preenchido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cep preenchido</label>
    <type>Checkbox</type>
</CustomField>