force-app/main/default/objects/Lead/fields/CEP_sg__c.field-meta.xml
<CustomField>
    <fullName>CEP_sg__c</fullName>
    <description>CEP Para integração portal Siggo</description>
    <label>CEP</label>
    <length>9</length>
    <type>Text</type>
</CustomField>