force-app/main/default/objects/Lead/fields/Chassi_sg__c.field-meta.xml
<CustomField>
    <fullName>Chassi_sg__c</fullName>
    <description>Chassi Para integração com portal Siggo</description>
    <label>Chassi</label>
    <length>17</length>
    <type>Text</type>
</CustomField>