force-app/main/default/objects/Lead/fields/Cidade_sg__c.field-meta.xml
<CustomField>
    <fullName>Cidade_sg__c</fullName>
    <description>Cidade Para integração portal Siggo</description>
    <label>Cidade</label>
    <length>50</length>
    <type>Text</type>
</CustomField>