force-app/main/default/objects/Lead/fields/Circuito__c.field-meta.xml
<CustomField>
    <fullName>Circuito__c</fullName>
    <label>Circuito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A planejar</fullName>
                <default>true</default>
                <label>À planejar</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>-- Nenhum --</fullName>
                <isActive>false</isActive>
                <label>-- Nenhum --</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>