force-app/main/default/objects/Lead/fields/Cliente_Indicador__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Indicador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente Indicador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Cliente Indicador)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>