force-app/main/default/objects/Lead/fields/Cod_FIPE__c.field-meta.xml
<CustomField>
    <fullName>Cod_FIPE__c</fullName>
    <label>Cod FIPE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>