force-app/main/default/objects/Lead/fields/Combustivel_Lead__c.field-meta.xml
<CustomField>
    <fullName>Combustivel_Lead__c</fullName>
    <description>Campo para integração do Portal de Parceiros Siggo - Para preenchimento do objeto Veículo da oportunidade</description>
    <label>Combustivel Lead</label>
    <length>50</length>
    <type>Text</type>
</CustomField>