force-app/main/default/objects/Lead/fields/Complemento_endereco__c.field-meta.xml
<CustomField>
    <fullName>Complemento_endereco__c</fullName>
    <label>Complemento endereço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>