force-app/main/default/objects/Lead/fields/Complemento_sg__c.field-meta.xml
<CustomField>
    <fullName>Complemento_sg__c</fullName>
    <description>Complemento Para integração portal Siggo</description>
    <label>Complemento</label>
    <length>50</length>
    <type>Text</type>
</CustomField>