force-app/main/default/objects/Lead/fields/Consultor_indicacao__c.field-meta.xml
<CustomField>
    <fullName>Consultor_indicacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultor de indicação</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Consultor_indicacao__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>