force-app/main/default/objects/Lead/fields/Conta_Indicadora__c.field-meta.xml
<CustomField>
    <fullName>Conta_Indicadora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta Indicadora</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Conta Indicadora)</relationshipLabel>
    <relationshipName>Conta_Indicadora</relationshipName>
    <type>Lookup</type>
</CustomField>