force-app/main/default/objects/Lead/fields/Contato_2__c.field-meta.xml
<CustomField>
    <fullName>Contato_2__c</fullName>
    <label>Contato 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>