force-app/main/default/objects/Lead/fields/Contato_3__c.field-meta.xml
<CustomField>
    <fullName>Contato_3__c</fullName>
    <label>Contato 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>