force-app/main/default/objects/Lead/fields/Contato_4__c.field-meta.xml
<CustomField>
    <fullName>Contato_4__c</fullName>
    <label>Contato 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>