force-app/main/default/objects/Lead/fields/Contato_Padrao__c.field-meta.xml
<CustomField>
    <fullName>Contato_Padrao__c</fullName>
    <description>Campo para integração do Portal de Parceiros e mapeamento para o Contato Padrão na oportunidade</description>
    <label>Contato Padrao</label>
    <length>100</length>
    <type>Text</type>
</CustomField>