force-app/main/default/objects/Lead/fields/Convertido_em__c.field-meta.xml
<CustomField>
    <fullName>Convertido_em__c</fullName>
    <label>Convertido em</label>
    <type>DateTime</type>
</CustomField>