force-app/main/default/objects/Lead/fields/Cor_veiculo_sg__c.field-meta.xml
<CustomField>
    <fullName>Cor_veiculo_sg__c</fullName>
    <description>Cor do Veículo para integração com o portal Siggo</description>
    <label>Cor do veiculo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>