force-app/main/default/objects/Lead/fields/Criado_Em__c.field-meta.xml
<CustomField>
    <fullName>Criado_Em__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Criado Em</label>
    <type>DateTime</type>
</CustomField>