force-app/main/default/objects/Lead/fields/Data_historico__c.field-meta.xml
<CustomField>
    <fullName>Data_historico__c</fullName>
    <description>Data do último histórico do lead</description>
    <label>Data histórico</label>
    <type>DateTime</type>
</CustomField>