force-app/main/default/objects/Lead/fields/Data_Hora_criacao__c.field-meta.xml
<CustomField>
    <fullName>Data_Hora_criacao__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data/Hora criação</label>
    <type>DateTime</type>
</CustomField>