force-app/main/default/objects/Lead/fields/Data_hora_de_contato__c.field-meta.xml
<CustomField>
    <fullName>Data_hora_de_contato__c</fullName>
    <label>Data/hora de contato</label>
    <type>DateTime</type>
</CustomField>