force-app/main/default/objects/Lead/fields/Data_Hora_origem__c.field-meta.xml
<CustomField>
    <fullName>Data_Hora_origem__c</fullName>
    <label>Data/Hora origem</label>
    <type>DateTime</type>
</CustomField>