force-app/main/default/objects/Lead/fields/Data_Nascimento_sg__c.field-meta.xml
<CustomField>
    <fullName>Data_Nascimento_sg__c</fullName>
    <description>Data de Nascimento para integração com o portal Siggo</description>
    <label>Data Nascimento</label>
    <type>Date</type>
</CustomField>