force-app/main/default/objects/Lead/fields/Detalhe_da_origem__c.field-meta.xml
<CustomField>
    <fullName>Detalhe_da_origem__c</fullName>
    <description>Campo para preenchimento por integração do detalhe da origem do visitante que preencheu o lead no site Siggo</description>
    <label>Detalhe da origem</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>