force-app/main/default/objects/Lead/fields/Detalhes_do_segmento__c.field-meta.xml
<CustomField>
    <fullName>Detalhes_do_segmento__c</fullName>
    <label>Detalhes do segmento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>