force-app/main/default/objects/Lead/fields/DNI__c.field-meta.xml
<CustomField>
    <fullName>DNI__c</fullName>
    <description>Documento Nacional de Identificação</description>
    <externalId>true</externalId>
    <inlineHelpText>Documento Nacional de Identificação. Formato: 00.000.000</inlineHelpText>
    <label>DNI</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>