force-app/main/default/objects/Lead/fields/E_mail__c.field-meta.xml
<CustomField>
    <fullName>E_mail__c</fullName>
    <label>E-mail</label>
    <type>TextArea</type>
</CustomField>