force-app/main/default/objects/Lead/fields/Embarcador__c.field-meta.xml
<CustomField>
    <fullName>Embarcador__c</fullName>
    <label>Embarcador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>