force-app/main/default/objects/Lead/fields/Enviado_Em__c.field-meta.xml
<CustomField>
    <fullName>Enviado_Em__c</fullName>
    <label>Enviado Em</label>
    <type>DateTime</type>
</CustomField>