force-app/main/default/objects/Lead/fields/Enviado_por__c.field-meta.xml
<CustomField>
    <fullName>Enviado_por__c</fullName>
    <label>Trabalhado por</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Televendas</fullName>
            </value>
            <value>
                <fullName>Televendas + Executivo</fullName>
            </value>
            <value>
                <fullName>Executivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>