force-app/main/default/objects/Lead/fields/Estado_Civil_sg__c.field-meta.xml
<CustomField>
    <fullName>Estado_Civil_sg__c</fullName>
    <description>Estado Civil  para integração com o portal Siggo</description>
    <label>Estado Civil</label>
    <length>50</length>
    <type>Text</type>
</CustomField>