force-app/main/default/objects/Lead/fields/Executivo_de_vendas__c.field-meta.xml
<CustomField>
    <fullName>Executivo_de_vendas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executivo de vendas</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>