force-app/main/default/objects/Lead/fields/Fila__c.field-meta.xml
<CustomField>
    <fullName>Fila__c</fullName>
    <formula>Owner:Queue.QueueName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fila</label>
    <type>Text</type>
</CustomField>