force-app/main/default/objects/Lead/fields/Finalizado_em__c.field-meta.xml
<CustomField>
    <fullName>Finalizado_em__c</fullName>
    <label>Finalizado em</label>
    <type>DateTime</type>
</CustomField>