force-app/main/default/objects/Lead/fields/Forma_de_Pagamento_Instalacao_sg__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_Pagamento_Instalacao_sg__c</fullName>
    <description>Forma de Pagamento Instalação  para integração com o portal Siggo</description>
    <label>Forma de Pagamento Instalacao</label>
    <length>50</length>
    <type>Text</type>
</CustomField>