force-app/main/default/objects/Lead/fields/Forma_de_Pagamento_Servico__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_Pagamento_Servico__c</fullName>
    <description>Forma de Pagamento Serviço  para integração com o portal Siggo</description>
    <label>Forma de Pagamento Servico</label>
    <length>100</length>
    <type>Text</type>
</CustomField>