force-app/main/default/objects/Lead/fields/Gerenciador__c.field-meta.xml
<CustomField>
    <fullName>Gerenciador__c</fullName>
    <formula>Executivo_de_vendas__r.Manager.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gerenciador</label>
    <type>Text</type>
</CustomField>