force-app/main/default/objects/Lead/fields/Gerenciador_de_risco__c.field-meta.xml
<CustomField>
    <fullName>Gerenciador_de_risco__c</fullName>
    <label>Gerenciador de risco</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Angelira</fullName>
            </value>
            <value>
                <fullName>APISUL Multisat</fullName>
            </value>
            <value>
                <fullName>Brasil Risk</fullName>
            </value>
            <value>
                <fullName>Buonny</fullName>
            </value>
            <value>
                <fullName>GV</fullName>
            </value>
            <value>
                <fullName>Opentech</fullName>
            </value>
            <value>
                <fullName>Raster</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>