force-app/main/default/objects/Lead/fields/Historico_Atualizacao_manual_de_motivo__c.field-meta.xml
<CustomField>
    <fullName>Historico_Atualizacao_manual_de_motivo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que mantém histórico que registro teve o campo motivo atualizado manualmente. Usado na regra de validação para seleção do motivo correto. (Campo criado para execução automática de padronização dos membros de campanha).</description>
    <label>Historico Atualização manual de motivo</label>
    <type>Checkbox</type>
</CustomField>