force-app/main/default/objects/Lead/fields/Id_registro__c.field-meta.xml
<CustomField>
    <fullName>Id_registro__c</fullName>
    <formula>RecordType.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id registro</label>
    <type>Text</type>
</CustomField>