force-app/main/default/objects/Lead/fields/IdLeadForOpp__c.field-meta.xml
<CustomField>
    <fullName>IdLeadForOpp__c</fullName>
    <description>Campo utilizado para armazenar o Id do Lead, e no momento da conversão para Oportunidade, informar a referência e auxiliar na transferência dos históricos de alteração do campo &quot;Descrição&quot;, armazenados no objeto Historico_Lead__c, para o objeto Historico_Oportunidade__c. Campo não deve ser exibido nos Layouts.</description>
    <formula>Id</formula>
    <label>IdLeadForOpp</label>
    <type>Text</type>
</CustomField>