force-app/main/default/objects/Lead/fields/idproprietario__c.field-meta.xml
<CustomField>
    <fullName>idproprietario__c</fullName>
    <formula>Owner:User.ProfileId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>idproprietario</label>
    <type>Text</type>
</CustomField>