force-app/main/default/objects/Lead/fields/Indica_o__c.field-meta.xml
<CustomField>
    <fullName>Indica_o__c</fullName>
    <description>Mostra Indicação</description>
    <label>Indicação para Segmento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NÃO É INDICAÇÃO PARA SEGMENTO</fullName>
            </value>
            <value>
                <fullName>PARA FRETEIRO</fullName>
            </value>
            <value>
                <fullName>PARA BLUETEC</fullName>
            </value>
            <value>
                <fullName>PARA CARGO TRACCK</fullName>
            </value>
            <value>
                <fullName>PARA CORP</fullName>
            </value>
            <value>
                <fullName>PARA SIGGO</fullName>
            </value>
            <value>
                <fullName>PARA KEY ACCOUNT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>