force-app/main/default/objects/Lead/fields/Indicador_Siggo__c.field-meta.xml
<CustomField>
    <fullName>Indicador_Siggo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campos para apontar o indicador do lead no caso de SIGGO.</description>
    <inlineHelpText>Campos para apontar o indicador do lead no caso de SIGGO.</inlineHelpText>
    <label>Indicador SIGGO</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Você só pode relacionar contas que tenham o código do programa de indicação preenchido.</errorMessage>
        <filterItems>
            <field>Account.IdExternoClienteIndicador__c</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Indicador SIGGO)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>