force-app/main/default/objects/Lead/fields/Informacoes_do_Cupom_no_lead__c.field-meta.xml
<CustomField>
    <fullName>Informacoes_do_Cupom_no_lead__c</fullName>
    <description>Campo preenchido via web-to-lead.</description>
    <label>Informações do Cupom no lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>