force-app/main/default/objects/Lead/fields/Inscri_o_Estadual__c.field-meta.xml
<CustomField>
    <fullName>Inscri_o_Estadual__c</fullName>
    <label>Inscrição Estadual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>