force-app/main/default/objects/Lead/fields/J_utilizou_rastreador__c.field-meta.xml
<CustomField>
    <fullName>J_utilizou_rastreador__c</fullName>
    <label>Já utilizou rastreador</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>