force-app/main/default/objects/Lead/fields/Lead_Indicador__c.field-meta.xml
<CustomField>
    <fullName>Lead_Indicador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Indicador</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>