force-app/main/default/objects/Lead/fields/Logradouro_sg__c.field-meta.xml
<CustomField>
    <fullName>Logradouro_sg__c</fullName>
    <description>Logradouro Para integração portal Siggo</description>
    <label>Logradouro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>