force-app/main/default/objects/Lead/fields/Marca_do_concorrente__c.field-meta.xml
<CustomField>
    <fullName>Marca_do_concorrente__c</fullName>
    <label>Marca do concorrente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AUTOTRAC</fullName>
            </value>
            <value>
                <fullName>Bridgestone</fullName>
            </value>
            <value>
                <fullName>BYSAT</fullName>
            </value>
            <value>
                <fullName>CARSYSTEM</fullName>
            </value>
            <value>
                <fullName>Continental</fullName>
            </value>
            <value>
                <fullName>Firestone</fullName>
            </value>
            <value>
                <fullName>GOLSAT</fullName>
            </value>
            <value>
                <fullName>Goodyear</fullName>
            </value>
            <value>
                <fullName>ITURAN</fullName>
            </value>
            <value>
                <fullName>LINK</fullName>
            </value>
            <value>
                <fullName>LO JACK</fullName>
            </value>
            <value>
                <fullName>MEGATRANS</fullName>
            </value>
            <value>
                <fullName>MICROTRACK</fullName>
            </value>
            <value>
                <fullName>ONIX</fullName>
            </value>
            <value>
                <fullName>OUTRA</fullName>
            </value>
            <value>
                <fullName>OUTROS</fullName>
            </value>
            <value>
                <fullName>Pirelli</fullName>
            </value>
            <value>
                <fullName>POINTER</fullName>
            </value>
            <value>
                <fullName>PORTO SEGURO</fullName>
            </value>
            <value>
                <fullName>POSITRON</fullName>
            </value>
            <value>
                <fullName>SITRACK</fullName>
            </value>
            <value>
                <fullName>TRACKER</fullName>
            </value>
            <value>
                <fullName>Truscom</fullName>
            </value>
            <value>
                <fullName>ZATIX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>