force-app/main/default/objects/Lead/fields/Mes_vencimento__c.field-meta.xml
<CustomField>
    <fullName>Mes_vencimento__c</fullName>
    <inlineHelpText>Mês de vencimento
Ex: 01, 06, 10, 12....</inlineHelpText>
    <label>Mês vencimento</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>