force-app/main/default/objects/Lead/fields/Modelo_do_Ve_culo__c.field-meta.xml
<CustomField>
    <fullName>Modelo_do_Ve_culo__c</fullName>
    <label>Modelo do Veículo</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>