force-app/main/default/objects/Lead/fields/Motivo_da_desqualifica_o_do_lead__c.field-meta.xml
<CustomField>
    <fullName>Motivo_da_desqualifica_o_do_lead__c</fullName>
    <label>Motivo da desqualificação do lead</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1ª Tentativa</fullName>
            </value>
            <value>
                <fullName>2ª Tentativa</fullName>
            </value>
            <value>
                <fullName>3 Tentativas sem sucesso</fullName>
            </value>
            <value>
                <fullName>3ª Tentativa</fullName>
            </value>
            <value>
                <fullName>4ª Tentativa</fullName>
            </value>
            <value>
                <fullName>6 tentativas sem sucesso</fullName>
            </value>
            <value>
                <fullName>Abandono Chat</fullName>
            </value>
            <value>
                <fullName>Baixo IRC</fullName>
            </value>
            <value>
                <fullName>Cliente de Base</fullName>
            </value>
            <value>
                <fullName>Cliente já efetuou a compra</fullName>
            </value>
            <value>
                <fullName>Cliente sem sinistro</fullName>
            </value>
            <value>
                <fullName>Condição Fiscal não atende</fullName>
            </value>
            <value>
                <fullName>Contato Impossível</fullName>
            </value>
            <value>
                <fullName>Contato Impossível - 5 tentativas sem sucesso</fullName>
            </value>
            <value>
                <fullName>Decisor ausente</fullName>
            </value>
            <value>
                <fullName>Destinatário errado (tel/mail)</fullName>
            </value>
            <value>
                <fullName>E-mail inválido</fullName>
            </value>
            <value>
                <fullName>E-mail não correspondido</fullName>
            </value>
            <value>
                <fullName>Empresa deixou de ser responsável pela compra da isca</fullName>
            </value>
            <value>
                <fullName>Empresa sem atividade</fullName>
            </value>
            <value>
                <fullName>Estoque elevado</fullName>
            </value>
            <value>
                <fullName>Falta de Pronta Resposta na região</fullName>
            </value>
            <value>
                <fullName>Fechado em pessoa jurídica</fullName>
            </value>
            <value>
                <fullName>Financeiro Sascar - Crédito</fullName>
            </value>
            <value>
                <fullName>Fora do perfil</fullName>
            </value>
            <value>
                <fullName>Implantação inviável</fullName>
            </value>
            <value>
                <fullName>Interessado em ouvir em Proposta</fullName>
            </value>
            <value>
                <fullName>Interesse Futuro</fullName>
            </value>
            <value>
                <fullName>Lead Duplicado</fullName>
            </value>
            <value>
                <fullName>Linha Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>