force-app/main/default/objects/Lead/fields/Motivo_do_Contato_Chat__c.field-meta.xml
<CustomField>
    <fullName>Motivo_do_Contato_Chat__c</fullName>
    <description>Tabulação do Contato realizado pelo Chat (preenchido por integração SnapEngage)</description>
    <label>Motivo do Contato (Chat)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospecção/Negociação</fullName>
            </value>
            <value>
                <fullName>Dúvidas do cliente</fullName>
            </value>
            <value>
                <fullName>Reclamação do cliente</fullName>
            </value>
            <value>
                <fullName>TROTE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>