force-app/main/default/objects/Lead/fields/N_mero_do_lead__c.field-meta.xml
<CustomField>
    <fullName>N_mero_do_lead__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Número do lead</label>
    <type>AutoNumber</type>
</CustomField>