force-app/main/default/objects/Lead/fields/Necessidade_Principa2l__c.field-meta.xml
<CustomField>
    <fullName>Necessidade_Principa2l__c</fullName>
    <label>Necessidade Principal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>